[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/UI/SpellSelection/Asset_Frame.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/SpellSelection/BackgroundPlate.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/font_72.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/UI/CharacterSelection/Asset_Zak.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/font_152.tres" type="DynamicFont" id=5]
[ext_resource path="res://Objects/UI/Gameplay/PlayerPresentation.gd" type="Script" id=6]
[ext_resource path="res://Assets/UI/CharacterSelection/Asset_Meg.png" type="Texture" id=7]

[sub_resource type="Animation" id=4]
resource_name = "PlayerPresentationShow"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("PresentationPanel1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1.1, 1.5 ),
"transitions": PoolRealArray( 0.091393, 0.217371, 0.0980735, 1 ),
"update": 0,
"values": [ Vector2( -708, 0 ), Vector2( -708, 0 ), Vector2( 292, 0 ), Vector2( 182, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PresentationPanel1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1.1, 1.5 ),
"transitions": PoolRealArray( 0.329877, 0.217371, 0.0980735, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PresentationPanel2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 1.1, 1.5 ),
"transitions": PoolRealArray( 0.091393, 0.217371, 0.0980735, 1 ),
"update": 0,
"values": [ Vector2( 1920, 0 ), Vector2( 1920, 0 ), Vector2( 952, 0 ), Vector2( 1054, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PresentationPanel2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 1.1, 1.5 ),
"transitions": PoolRealArray( 0.329877, 0.217371, 0.0980735, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VS/V:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.143588, 1 ),
"update": 0,
"values": [ Vector2( -131.448, 22 ), Vector2( 21.552, 22 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("VS/S:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.143588, 1 ),
"update": 0,
"values": [ Vector2( 206, 59 ), Vector2( 102, 59 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("VS/V:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("VS/S:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "method"
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.9, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "shake_wizards"
}, {
"args": [ false ],
"method": "shake_wizards"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PresentationPanel1/Holder/WizardTexture:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 211.5, 123 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PresentationPanel1:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 169, 179 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PresentationPanel1:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PresentationPanel2/Holder/Background:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 13, 62.5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PresentationPanel2:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1920, 179 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PresentationPanel2:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("PresentationPanel2:show_behind_parent")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("VS/V:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 24, 22 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("VS/S:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 166, 59 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("VS/V:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("VS/S:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("PresentationPanel2/Holder/WizardTexture:rect_position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 211.503, 123 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("PresentationPanel1/Holder:rect_position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.000976563, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "ShakeWizards"
length = 0.04
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("PresentationPanel1/Holder:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.03, 0.04 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -8, -8 ), Vector2( 2.66666, 2.66666 ), Vector2( 9.33331, -6.66669 ), Vector2( -8, 8 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "PlayerPresentationShow"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("PresentationPanel1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1, 1.5 ),
"transitions": PoolRealArray( 0.091393, 0.217371, 0.0980735, 1 ),
"update": 0,
"values": [ Vector2( -708, 0 ), Vector2( -708, 0 ), Vector2( 292, 0 ), Vector2( 182, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PresentationPanel1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1, 1.5 ),
"transitions": PoolRealArray( 0.329877, 0.217371, 0.0980735, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PresentationPanel2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 1, 1.5 ),
"transitions": PoolRealArray( 0.091393, 0.217371, 0.0980735, 1 ),
"update": 0,
"values": [ Vector2( 1920, 0 ), Vector2( 1920, 0 ), Vector2( 952, 0 ), Vector2( 1054, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PresentationPanel2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 1, 1.5 ),
"transitions": PoolRealArray( 0.329877, 0.217371, 0.0980735, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VS/V:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.143588, 1 ),
"update": 0,
"values": [ Vector2( -83.448, 22 ), Vector2( 21.552, 22 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("VS/S:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.143588, 1 ),
"update": 0,
"values": [ Vector2( 166, 59 ), Vector2( 102, 59 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("VS/V:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("VS/S:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "method"
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.9, 1.00353 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "shake_wizards"
}, {
"args": [ false ],
"method": "shake_wizards"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PresentationPanel1/Holder/WizardTexture:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 211.5, 123 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PresentationPanel1:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 169, 179 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PresentationPanel1:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PresentationPanel2/Holder/Background:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 13, 62.5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PresentationPanel2:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1920, 179 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PresentationPanel2:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("PresentationPanel2:show_behind_parent")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("VS/V:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 24, 22 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("VS/S:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 166, 59 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("VS/V:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("VS/S:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("PresentationPanel2/Holder/WizardTexture:rect_position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 211.503, 123 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("PresentationPanel1/Holder:rect_position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.000976563, 0 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("PresentationPanel2/Holder:rect_position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.000213623, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "ShakeWizards"
length = 0.04
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("PresentationPanel1/Holder:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.03, 0.04 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -8, -8 ), Vector2( 2.66666, 2.66666 ), Vector2( 9.33331, -6.66669 ), Vector2( -8, 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PresentationPanel2/Holder:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.03, 0.04 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.000213623, 0 ), Vector2( 7.99979, -8 ), Vector2( -2.66687, 2.66666 ), Vector2( -9.33356, -6.66669 ), Vector2( 7.99979, 8 ) ]
}

[node name="PlayerPresentation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
name_p1 = "Zak"
wizard_texture_p1 = ExtResource( 4 )
name_p2 = "Meg"
wizard_texture_p2 = ExtResource( 7 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 346, 155 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="VS" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = 229.0
margin_right = 117.0
margin_bottom = 437.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line" type="ColorRect" parent="VS"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1100.0
margin_top = -150.0
margin_right = 1100.0
margin_bottom = 150.0
color = Color( 0, 0, 0, 1 )

[node name="V" type="Label" parent="VS"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -82.0
margin_right = 9.00002
margin_bottom = 59.0
custom_fonts/font = ExtResource( 5 )
text = "V"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S" type="Label" parent="VS"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 57.0
margin_top = -45.0
margin_right = 151.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 5 )
text = "S"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PresentationPanel1" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 169.0
margin_top = -361.0
margin_right = 872.0
margin_bottom = 445.0
rect_pivot_offset = Vector2( 351, 402 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Holder" type="Control" parent="PresentationPanel1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -351.499
margin_top = -403.0
margin_right = 351.499
margin_bottom = 403.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="PresentationPanel1/Holder"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -338.5
margin_top = -340.5
margin_right = 338.5
margin_bottom = 340.5
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerId" type="Label" parent="PresentationPanel1/Holder"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -293.5
margin_top = 91.0
margin_right = -223.5
margin_bottom = 159.0
custom_fonts/font = ExtResource( 3 )
text = "P1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="PresentationPanel1/Holder"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -300.5
margin_top = 828.0
margin_right = 246.5
margin_bottom = 896.0
custom_fonts/font = ExtResource( 3 )
text = "NAME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WizardTexture" type="TextureRect" parent="PresentationPanel1/Holder"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.999
margin_top = -280.0
margin_right = 140.001
margin_bottom = 280.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PresentationPanel2" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 1920.0
margin_top = -361.0
margin_right = 2623.0
margin_bottom = 445.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Holder" type="Control" parent="PresentationPanel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -351.499
margin_top = -403.0
margin_right = 351.5
margin_bottom = 403.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="PresentationPanel2/Holder"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -338.499
margin_top = -340.5
margin_right = 338.501
margin_bottom = 340.5
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerId" type="Label" parent="PresentationPanel2/Holder"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 202.598
margin_top = 91.0
margin_right = 282.598
margin_bottom = 159.0
custom_fonts/font = ExtResource( 3 )
text = "P2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="PresentationPanel2/Holder"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -273.499
margin_top = 820.0
margin_right = 271.501
margin_bottom = 888.0
custom_fonts/font = ExtResource( 3 )
text = "NAME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WizardTexture" type="TextureRect" parent="PresentationPanel2/Holder"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.996
margin_top = -280.0
margin_right = 140.004
margin_bottom = 280.0
texture = ExtResource( 4 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/PlayerPresentationShow = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/ShakeWizards = SubResource( 6 )

[node name="ShakeWizardsPlayer" type="AnimationPlayer" parent="."]
anims/PlayerPresentationShow = SubResource( 1 )
anims/RESET = SubResource( 2 )
anims/ShakeWizards = SubResource( 3 )
